--- a/css/styles.css
+++ b/css/styles.css
@@ -532,3 +532,65 @@ img {
 }
 
 /*----------------------*/
+/*----------MODAL------------*/
+
+
+.backdrop {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    background-color: rgba(76, 76, 76, 0.605);
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.is-open {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    background-color: #fcfcfc;
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 24px;
+}
+
+.modal-close-btn {
+    margin: left auto;
+}
+
+.modal-title {
+}
+
+.title {
+}
+
+.modal-form {
+}
+
+.modal-field {
+}
+
+.modal-label {
+}
+
+.modal-input {
+}
+
+.moda-field-icon {
+}
+
+.modal-text {
+}
+
+
+/*----------------------*/
