--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,8 @@ img {
     min-width: 165px;
     height: 40px;
     background-color: #4d5ae5;
+    cursor: pointer;
+    border: none;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -610,11 +612,11 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     width: 408px;
     min-height: 584px;
     background-color: #fcfcfc;
     border-radius: 4px;
+    transform: translate(-50%, -50%);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
     padding: 72px 24px 24px 24px;
@@ -645,6 +647,7 @@ img {
     height: 24px;
     right: 24px;
     top: 24px;
+    cursor: pointer;
     justify-content: center;
     align-items: center;
     padding: 0;
@@ -660,7 +663,7 @@ img {
 
 .model-btn-close:hover .icon-close,
 .model-btn-close:focus .icon-close {
-    fill: #fff;
+    fill: #ffffff;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -723,6 +726,7 @@ img {
 
 .input {
     position: relative;
+    width: 100%;
 }
 
 .input-icon {
