--- a/css/styles.css
+++ b/css/styles.css
@@ -716,12 +716,12 @@ img {
 
 .model-input:hover,
 .model-input:focus {
-    border: 1px solid #4d5ae5;
+    border: 1px solid #4D5AE5;
 }
 
 .model-input:hover + .input-icon,
 .model-input:focus + .input-icon {
-    fill: #4d5ae5;
+    fill: #4D5AE5;
 }
 
 .input {
@@ -769,6 +769,10 @@ img {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.model-text .model-input {
+    width: 100%;
+}
+
 .model-field {
     margin-bottom: 24px;
 }
@@ -776,7 +780,7 @@ img {
 .model-check:checked + .model-police .model-accent {
     background-color: #404bbf;
     border: none;
-    fill: #f4f4fd;
+    fill: #F4F4FD;
 }
 
 .model-police {
@@ -804,15 +808,18 @@ img {
 
 .police-link {
     margin-left: 4px;
-    color: #4d5ae5;
+    color: #4D5AE5;
 }
 
 .model-btn-send {
+    display: block;
+    cursor: pointer;
+    border: none;
     border-radius: 4px;
     min-width: 169px;
     height: 56px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background: #4d5ae5;
+    background: #4D5AE5;
     margin-top: 24px;
     font-weight: 500;
     font-size: 16px;
