--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,6 @@ img {
 /*------------HEADER----------*/
 
 .header {
-    padding-top: 24px;
-    padding-bottom: 24px;
     border-bottom: 1px solid #e7e9fc;
     box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 
@@ -46,16 +44,18 @@ img {
 }
 
 .header-container {
-    display: flex;
+    display: flex;align-items: center;
+
 }
 
 .header-nav {
     display: flex;
     align-items: center;
-    padding: 24px 0;
 }
 
 .header-logo {
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 18px;
@@ -78,6 +78,7 @@ img {
 }
 
 .header-menu-link {
+    display: block;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -139,6 +140,9 @@ img {
 }
 
 .header-cont-link {
+    display: block;
+    padding-top: 24px;
+    padding-bottom: 24px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -245,7 +249,6 @@ img {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-top: 32px;
     margin-bottom: 8px;
 }
 
@@ -292,7 +295,6 @@ img {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
@@ -376,7 +378,6 @@ img {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    padding-top: 120px;
     margin-bottom: 72px;
 }
 
