--- a/css/styles.css
+++ b/css/styles.css
@@ -637,7 +637,7 @@ img {
     min-height: 584px;
     background-color: #fcfcfc;
     border-radius: 4px;
-    transform: translate(-50%, -50%);
+    transform:translate(-50%, -50%);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
     padding: 72px 24px 24px 24px;
@@ -711,7 +711,7 @@ img {
 .model-input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    width: 360px;
+    width: 100%;
     height: 40px;
     font-size: 18px;
     padding-left: 38px;
@@ -737,11 +737,13 @@ img {
 .model-input:hover,
 .model-input:focus {
     border: 1px solid #4D5AE5;
+    border-color: #4D5AE5;
 }
 
 .model-input:hover + .input-icon,
 .model-input:focus + .input-icon {
     fill: #4D5AE5;
+    border-color: #4D5AE5;
 }
 
 .input {
