--- a/css/styles.css
+++ b/css/styles.css
@@ -618,6 +618,9 @@ img {
 /*----------MODAL------------*/
 
 .backdrop {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events:none;
     width: 100%;
     height: 100%;
     top: 0;
@@ -652,10 +655,7 @@ img {
 }
 
 
-.is-open .backdrop,
-.is-open .model {
-    display: none;
-}
+
 
 .model-btn-close {
     position: absolute;
